# cast2md

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  Dockerfile  PROJECT_REVIEW.md  README.md  TRANSCRIPT_FINDINGS.md  cast2md-requirements.md  compose.example.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-afterburner.yml  deploy.yml  docs.yml  release.yml
deploy/: .kopiaignore  backup.sh  cast2md.service  install.sh  kopia-backup.sh
deploy/afterburner/: .env.example  Dockerfile  IMAGE.md  README.md  afterburner.py  node-setup.sh  startup.sh
docs/: CNAME  INCIDENT_REPORT_2026-01-21.md  LESSON_LEARNED_premium-podcast-signed-urls.md  PLAN-semantic-search.md  PLAN-tray-app.md  REVIEW-semantic-search.md  database-implementation.md  database-lock-investigation.md  distributed-transcription-architecture.md  distributed-transcription-setup.md  episode-states.md  gui_recommendations.md  index.md  kopia-integration.md  node-installation-status.md  python_vector_solutions.md  runpod-performance.md  server-sizing.md  transcript-discovery.md  ui-guidelines.md  vector_embeddings_concept.md
docs/administration/: index.md  queue.md  runpod.md  settings.md  status.md
docs/configuration/: environment.md  index.md  whisper-models.md
docs/deployment/: index.md  server-sizing.md
docs/development/: index.md  ui-guidelines.md
docs/distributed/: architecture.md  index.md  performance.md  runpod.md  setup.md
docs/features/: architecture.md  episode-states.md  index.md  search.md  transcript-sources.md
docs/getting-started/: index.md  screenshots.md
docs/installation/: docker.md  index.md  manual.md  node.md
docs/internal/: mobile-deploy.md
scripts/: cast2md-node.sh  launchd-template.plist  migrate_to_postgres.py
tests/: __init__.py  conftest.py  test_job_repository.py  test_search.py  test_semantic_search.py  test_settings.py
(+74 files in other folders)
