[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cast2md"
version = "0.1.0"
description = "Podcast transcription service - download episodes via RSS and transcribe with Whisper"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "cast2md"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "feedparser>=6.0.0",
    "httpx>=0.26.0",
    "faster-whisper>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "bleach>=6.0",
    "mcp[cli]>=1.2.0",
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
]
mlx = [
    "mlx-whisper>=0.4.0",
]

[project.scripts]
cast2md = "cast2md.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# Use CPU-only PyTorch (avoid downloading 2GB+ of CUDA dependencies)
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
